<resources>
    <string name="app_name">robust</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lottie">lottie.json</string>
    <string name="developers">Developers:</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="gmail">Gmail</string>
    <string name="add_an_item">Add an item</string>
    <string name="quantity_in_units">Quantity in units</string>
    <string name="add_button">Add Button</string>
    <string name="empty_fridge_txt">Your fridge is empty</string>
    <string name="don_t_procrastinate">Don’t Procrastinate</string>
    <string name="have_a_positive_attitude">A positive attitude \nwill help you think of \nwhat you are doing \nas important, which \nis a great way to \nstay motivated and \nworking toward a \ngoal.</string>
    <string name="have_positive_attitude_title">Have Positive Attitude</string>
    <string name="have_a_positive_attitude_icon">Have a positive attitude icon</string>
    <string name="don_t_procastinate_desc">If you want to get \nmore out of your life\n, then stop dreaming \nand start taking \nactions today, not \ntomorrow.</string>
    <string name="don_t_procrastinate_icon">Don\'t Procrastinate Icon</string>
    <string name="never_quit_title">Never Quit</string>
    <string name="never_quit_desc">High achievers are \ntenacious, sticking to \ntheir plans and goals \nas long as they need \nto in order to get \nwhere they want to be.</string>
    <string name="never_quit_icon">Never Quit Icon</string>
    <string name="erase_anxiety_title">Erase out anxieties \nand stress-causing \nworries.</string>
    <string name="erase_anxiety_icon">Erase Anxiety Icon</string>
    <string name="erase_anxiety_desc">Wipe out all the stress-causing \ntriggers from \nthe mind.</string>
    <string name="learn_something_new_title">Daily learn \nsomething new</string>
    <string name="learn_something_new_icon">Learn Something New Icon</string>
    <string name="learn_something_new_desc">Knowledge is power. \nWhen you have \nknowledge, you have \nthe power to \nachieve many things.</string>
    <string name="exercise_regularly_title">Exercise regularly.</string>
    <string name="exercise_regularly_icon">Exercise Regularly Icon</string>
    <string name="exercise_regularly_desc">Mind are so closely \nlinked, when your \nbody feels better so, \ntoo, will your mind.</string>
    <string name="have_sound_sleep_title">Have a sound sleep - 8\nhrs daily.</string>
    <string name="have_a_sound_sleep_icon">Have a Sound Sleep Icon</string>
    <string name="have_sound_sleep_desc">It strongly influences\nour capacity to recover both \nmentally and physically.</string>
    <string name="drink_water_title">75% of Brain is water -\nDrink a lot of it.</string>
    <string name="drink_water_icon">Drink Water Icon</string>
    <string name="drink_water_desc">Brain is strongly influenced\nby your hydration status.</string>
    <string name="healthy_mind_title">Healthy mind is a happy\nmind.</string>
    <string name="healthy_mind_icon">Healthy Mind Icon</string>
    <string name="healthy_mind_desc">Your diet definitely has a\nbig impact on your brain\nhealth.</string>
    <string name="life_goal_title">Know where you want\nto go in life.</string>
    <string name="life_goal_icon">Life Goal Icon</string>
    <string name="life_goal_desc">Setting goals guides\nyour focus and helps you\nsustain that momentum in\nlife.</string>
    <string name="increment_button">Increment Button</string>
    <string name="start_value">0</string>
    <string name="decrement_button">Decrement Button</string>
    <string name="expiry">Expiry:</string>
    <string name="fridge">Fridge</string>
    <string name="tips">Tips</string>
    <string name="about">About</string>
    <string-array name="Tag">
        <item>Others</item>
        <item>Dairy</item>
        <item>Fruits</item>
        <item>Veggies</item>
        <item>Meat</item>
        <item>Pulses</item>
        <item>Snacks</item>
        <item>Drinks</item>
    </string-array>

    <item name="calendarCard" type="id">@id/calendarCard</item>
</resources>