<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:elevation="16dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/fridgeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/increment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                android:contentDescription="@string/increment_button"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/sofiaprosoftregular"
                    android:text="@string/start_value"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/decrement"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/decrement_button"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sofiaprosoftbold"
                tools:text="Butter"
                android:textColor="#292929"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:text="@string/expiry"
                    android:textColor="#494949"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiaprosoftmedium"
                    android:textColor="#494949"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="13dp"
            app:strokeColor="#6082FF"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#8CDCFF"
                android:fontFamily="@font/sofiaprosoftmedium"
                android:foregroundGravity="center"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                tools:text="dairy"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>