<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddItemFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemNameTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:forceDarkAllowed="false"
        android:hint="@string/add_an_item"
        app:hintTextColor="@color/dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textCapSentences"
            android:lines="1"
            android:maxLength="22"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@id/calendarCard"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/material_red"
            android:textAlignment="center"
            app:cardCornerRadius="100dp">

            <TextView
                android:id="@+id/calendarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sofiaprosoftmedium"
                android:text="Select Date"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemCountTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:forceDarkAllowed="false"
            android:hint="@string/quantity_in_units"
            app:hintTextColor="@color/dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="22"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EBFFEB"
        app:cardCornerRadius="10dp">

        <Spinner
            android:id="@+id/itemTag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/Tag"
            android:padding="5dp"
            android:spinnerMode="dropdown" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_check"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:backgroundTint="@color/ColorFabRed"
        android:src="@drawable/ic_baseline_check_24"
        app:rippleColor="#FFA3A3"
        app:tint="@color/white"
        android:contentDescription="@string/add_button" />

</LinearLayout>